# WAV-file-editor-library

./: .gitignore  CMakeLists.txt  CMakeLists_Simple.txt  README.md  README_Simple.md  SoundSegment.cpp  SoundSegment.hpp  SoundSegment_Simple.cpp  SoundSegment_Simple.hpp  demo  demo.cpp  demo_simple.cpp  run_tests.sh  test_simple.py
tests/: benchmark.py  test_audio_editor.py  test_basic.cpp
